Fix resume text alignment and pdf download link

--- a/src/components/ResumeSection/_ResumeSection.scss
+++ b/src/components/ResumeSection/_ResumeSection.scss
@@ -60,6 +60,7 @@
         padding: .2em 0;
         margin-top: 0;
         margin-bottom: 0;
+        text-align: left;
       }
       
       .Resume__primary__section__item {
